--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,9 @@
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3"
   }
 }
